update gap issue in right side corporate-service page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,10 +411,10 @@ h2 {
 
   .blog-title-bg {
     top: 0px;
-  }
+}
 
   .about-title-bg {
-      font-size: 1rem !important;
+      font-size: 3.3rem !important;
       top: 35px !important;
       letter-spacing: 2px;
   }
